# computer_vision-udd

./: .dockerignore  .env.template  .gitignore  README.md  architecture.md  docker-compose.mlops.yml  docker-compose.production.yml  docker-compose.yml  main.py  prototype.md  pyproject.toml  start.sh  tasks.md  upload_sample_images.sh
.github/workflows/: cd.yml  ci.yml
backend/: .coverage  .dockerignore  .env.example  .gitkeep  Dockerfile  coverage.xml  demo_phase_2_3.py  pyproject.toml
backend/scripts/: init_db.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  dependencies.py  middleware.py
backend/src/api/routes/: __init__.py  detection.py  health.py  images.py
backend/src/core/: __init__.py  config.py  logging.py
backend/src/db/: base.py  session.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 7d07ec59210b_create_images_and_detections_tables.py  add_performance_indexes.py
backend/src/models/: __init__.py  detection.py  image.py
backend/src/schemas/: __init__.py  common.py  detection.py  image.py  validation.py
backend/src/services/: __init__.py  cv_service_interface.py  detection_repository.py  detection_service.py  image_repository.py  image_repository_impl.py  image_service.py  yolos_cv_service.py
backend/src/utils/: __init__.py  file_storage.py  file_utils.py  image_processing.py  label_translations.py  model_loader.py  monitoring.py
backend/tests/: conftest.py
backend/tests/integration/: test_detection_repository.py  test_detection_routes.py  test_error_routes.py  test_image_list_routes.py  test_image_repository.py  test_image_routes.py  test_models_db.py
backend/tests/unit/: test_config.py  test_detection_repository_pagination.py  test_detection_service.py  test_file_storage.py  test_file_utils.py  test_image_processing.py  test_image_service.py  test_schemas.py  test_yolos_cv_service.py
docker/api/: Dockerfile  entrypoint.sh
docker/eda/: Dockerfile  entrypoint.sh  jupyter_config.py  pyproject.toml
docker/frontend/: Dockerfile  nginx.conf
docker/grafana/dashboard-configs/: infrastructure-dashboard.json  mlops-dashboard.json
docker/grafana/datasources/: datasources.yml
docker/loki/: local-config.yaml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml  rules.yml
docker/promtail/: config.yml
docker/redis/: redis.conf
docker/training/: Dockerfile  entrypoint.sh  pyproject.toml
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  test-utils.tsx
frontend/src/__tests__/: detectionsPage.spec.tsx  imagesListPage.spec.tsx  overlay.spec.tsx  upload.spec.tsx  uploadPage.spec.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: DetectionsOverlay.tsx  ErrorBoundary.tsx  ImageUploadForm.tsx  Toast.tsx
frontend/src/pages/: DetectionsPage.tsx  ImageDetailPage.tsx  ImagesListPage.tsx  UploadPage.tsx
scripts/: mlops.sh  test-integration.sh
test_images/: README.md
