[project]
name = "cv-eda"
version = "0.1.0"
description = "Computer Vision Exploratory Data Analysis Service"
authors = [{name = "CV Team", email = "team@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "boto3>=1.29.0",
    "minio>=7.2.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "streamlit>=1.28.0",
    "altair>=5.1.0",
    "ydata-profiling>=4.6.0",
    "sweetviz>=2.3.0",
    "missingno>=0.5.0",
    "wordcloud>=1.9.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "datasets>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"