[project]
name = "cv-training"
version = "0.1.0"
description = "Computer Vision Training Service"
authors = [{name = "CV Team", email = "team@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "mlflow>=2.8.0",
    "wandb>=0.16.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "boto3>=1.29.0",
    "minio>=7.2.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
    "tensorboard>=2.15.0",
    "optuna>=3.4.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"